--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,25 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -41,21 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n0079\", 5555)"
+    "ak.connect(\"n0076\", 5555)"
    ]
   },
   {
@@ -85,21 +62,23 @@
      "output_type": "stream",
      "text": [
       "Cluster files written to:  /mmfs1/home/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_post.tsv\n",
-      "WCC found 398826 clusters to be well-connected.\n"
+      "WCC found 26 clusters to be well-connected.\n"
      ]
     }
    ],
    "source": [
     "# Create an Arachne graph from a test network file.\n",
     "#ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_1.tsv\"))\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
     "#ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/home/md724/testFolder/wcc_inputs/networks/cen_0.01_cm_v1_sample_0.tsv\"))\n",
     "#ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/home/md724/testFolder/wcc_inputs/networks/cen_0.01_cm_v1_sample_1.tsv\"))\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/home/md724/testFolder/wcc_inputs/networks/cen_0.01_no_cm_v1_sample_0.tsv\"))\n",
+    "#ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/home/md724/testFolder/wcc_inputs/networks/cen_0.01_no_cm_v1_sample_0.tsv\"))\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "#file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_1.tsv\")\n",
+    "# file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_1.tsv\")\n",
+    "file_path = os.path.abspath(\"./data/wcc/test_clustering.tsv\")\n",
     "#file_path = os.path.abspath(\"/home/md724/testFolder/wcc_inputs/clusterings/cen_0.01_cm_v1_sample_0_leiden.tsv\")\n",
     "#file_path = os.path.abspath(\"/home/md724/testFolder/wcc_inputs/clusterings/cen_0.01_cm_v1_sample_1_leiden.tsv\")\n",
-    "file_path = os.path.abspath(\"/home/md724/testFolder/wcc_inputs/clusterings/cen_0.01_no_cm_v1_sample_0_leiden.tsv\")\n",
+    "#file_path = os.path.abspath(\"/home/md724/testFolder/wcc_inputs/clusterings/cen_0.01_no_cm_v1_sample_0_leiden.tsv\")\n",
     "output_path = os.path.abspath(\"./output/\")\n",
     "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
     "\n",
