WCC Disconnected Fix and Other Optimizations (#148)
* Ignore nauty-wrapper and Clustering_Algorithms directories

* ready to UIUC tests

* finalized fix for wcc vertex id to cluster id race condition

* notebook update

* updated tsv file reading

* removed "post" and "during" output types

---------

Co-authored-by: Mohammad Dindoost <mohammad.dindoost@gmail.com>

--- a/arachne/examples/wcc.ipynb
+++ b/arachne/examples/wcc.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -29,53 +14,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n113\", 5555)"
+    "ak.connect(\"n0078\", 5555)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "86b36041",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cluster files written to:  /scratch/users/oaa9/arkouda-njit/arachne/output/test.tsv\n",
-      "WCC found 76 clusters to be well-connected.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an Arachne graph from a test network file.\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"../data/wcc/test_network.tsv\"))\n",
     "\n",
-    "# Establish paths to the data that WCC is to utilize.\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
     "file_path = os.path.abspath(\"../data/wcc/test_clustering.tsv\")\n",
     "output_path = os.path.abspath(\"../output/\")\n",
-    "output_filename = \"test.tsv\"\n",
+    "output_filename = \"test_network_wcc_output_post.tsv\"\n",
     "\n",
-    "# Execute WCC with criterion log10.\n",
     "num_clusters = ar.well_connected_components(ar_network_graph, file_path, output_path, \n",
     "                                            output_filename=output_filename,\n",
     "                                            output_type = \"post\",\n",
-    "                                            connectedness_criterion = \"log10\",\n",
-    "                                            connectedness_criterion_mult_value = 0.05,\n",
+    "                                            connectedness_criterion = \"log10\", # \"log2\", \"sqrt\", and \"mult\" also options\n",
     "                                            pre_filter_min_size=1, post_filter_min_size=1)\n",
     "print(f\"WCC found {num_clusters} clusters to be well-connected.\")"
    ]
@@ -83,7 +49,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "arkouda-dev",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
