--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,10 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c6537651",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes: 688\n",
+      "Number of edges: 1079\n",
+      "Building property graph with 688 vertices and 1079 edges took 0.18 seconds.\n",
+      "motif_counting started for ...\n",
+      "motif_counting for .... took 219.3 seconds.\n",
+      "isos =  (array([921 921 32883898 0]), array([0 0 0 ... 0 0 0]))\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -24,7 +44,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n0013\", 5555)\n",
+    "ak.connect(\"n0120\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -80,6 +100,7 @@
     "\n",
     "# Define the file path\n",
     "file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "# file_path =\"/home/md724/arkouda-njit/arachne/data/motifCounting/Simple_1.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_1000.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_100000.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.05_1000.txt\"\n",
@@ -140,7 +161,7 @@
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 3 ,0,\n",
+    "isos = ar.motif_counting(prop_graph, 6 ,0,\n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
