--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -28,10 +28,10 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 0.18 seconds.\n",
+      "Building property graph with 688 vertices and 1079 edges took 0.14 seconds.\n",
       "motif_counting started for ...\n",
-      "motif_counting for .... took 219.3 seconds.\n",
-      "isos =  (array([921 921 32883898 0]), array([0 0 0 ... 0 0 0]))\n"
+      "motif_counting for .... took 62.59 seconds.\n",
+      "isos =  (array([921 921 65767796 0]), array([0 0 0 ... 0 0 0]))\n"
      ]
     }
    ],
@@ -100,6 +100,7 @@
     "\n",
     "# Define the file path\n",
     "file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "# file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/social.txt\"\n",
     "# file_path =\"/home/md724/arkouda-njit/arachne/data/motifCounting/Simple_1.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_1000.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_100000.txt\"\n",
