Best Performance and SNPD

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -28,10 +28,10 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 0.14 seconds.\n",
+      "Building property graph with 688 vertices and 1079 edges took 1.41 seconds.\n",
       "motif_counting started for ...\n",
-      "motif_counting for .... took 62.59 seconds.\n",
-      "isos =  (array([921 921 65767796 0]), array([0 0 0 ... 0 0 0]))\n"
+      "motif_counting for .... took 0.1 seconds.\n",
+      "isos =  (array([62 62 24448 0]), array([0 0 0 ... 1 0 0]))\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n0120\", 5555)\n",
+    "ak.connect(\"n0100\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -101,7 +101,7 @@
     "# Define the file path\n",
     "file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
     "# file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/social.txt\"\n",
-    "# file_path =\"/home/md724/arkouda-njit/arachne/data/motifCounting/Simple_1.txt\"\n",
+    "#file_path =\"/home/md724/arkouda-njit/arachne/data/motifCounting/Simple_1.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_1000.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_100000.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.05_1000.txt\"\n",
@@ -162,7 +162,7 @@
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 6 ,0,\n",
+    "isos = ar.motif_counting(prop_graph, 6 ,4,\n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
