ASWS updated by new changes

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,10 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -28,9 +42,9 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 1.41 seconds.\n",
+      "Building property graph with 688 vertices and 1079 edges took 0.16 seconds.\n",
       "motif_counting started for ...\n",
-      "motif_counting for .... took 0.1 seconds.\n",
+      "motif_counting for .... took 0.095 seconds.\n",
       "isos =  (array([62 62 24448 0]), array([0 0 0 ... 1 0 0]))\n"
      ]
     }
@@ -44,7 +58,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n0100\", 5555)\n",
+    "ak.connect(\"n0107\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -169,7 +183,7 @@
     "exec_time = end - start\n",
     "print(f\"motif_counting for ....\"\n",
     "\n",
-    "        f\" took {round(exec_time,2)} seconds.\")\n",
+    "        f\" took {round(exec_time,3)} seconds.\")\n",
     "print(\"isos = \", isos)\n",
     "# print(\"uniqueMotifClasses.size, globalClasses.size, globalMotifCount.read(), motifCounts.size \")\n",
     "# isos = ar.motif_counting(prop_graph, 5)\n",
