--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,24 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -42,10 +28,10 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 0.16 seconds.\n",
+      "Building property graph with 688 vertices and 1079 edges took 0.58 seconds.\n",
       "motif_counting started for ...\n",
-      "motif_counting for .... took 0.095 seconds.\n",
-      "isos =  (array([62 62 24448 0]), array([0 0 0 ... 1 0 0]))\n"
+      "motif_counting for .... took 0.044 seconds.\n",
+      "isos =  (array([7 7 5752 7]), array([0 0 0 1 0 0 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 1 0 0 1 0 0 0 0 0 1 0 0 0 1 0 0 1 0 0 0 1 1 1 0 0 0 0 0 0 0 1 1 0 0 1 0 1 0 0 1 1 0]))\n"
      ]
     }
    ],
@@ -176,7 +162,7 @@
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 6 ,4,\n",
+    "isos = ar.motif_counting(prop_graph, 3 ,1,\n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
