--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -28,10 +28,10 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 0.58 seconds.\n",
+      "Building property graph with 688 vertices and 1079 edges took 0.22 seconds.\n",
       "motif_counting started for ...\n",
-      "motif_counting for .... took 0.044 seconds.\n",
-      "isos =  (array([7 7 5752 7]), array([0 0 0 1 0 0 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 1 0 0 1 0 0 0 0 0 1 0 0 0 1 0 0 1 0 0 0 1 1 1 0 0 0 0 0 0 0 1 1 0 0 1 0 1 0 0 1 1 0]))\n"
+      "motif_counting for .... took 0.009 seconds.\n",
+      "isos =  (array([1 1 4 0]), array([0 0 0 0 0 0 1 1 0]))\n"
      ]
     }
    ],
