MotifCountingDistributed working version

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -28,10 +28,10 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 0.22 seconds.\n",
+      "Building property graph with 688 vertices and 1079 edges took 1.5 seconds.\n",
       "motif_counting started for ...\n",
-      "motif_counting for .... took 0.009 seconds.\n",
-      "isos =  (array([1 1 4 0]), array([0 0 0 0 0 0 1 1 0]))\n"
+      "motif_counting for .... took 2.263 seconds.\n",
+      "isos =  (array([0]), array([0]))\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n0107\", 5555)\n",
+    "ak.connect(\"n0050\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
