--- a/arachne/examples/ISO_matching_small_mesh.ipynb
+++ b/arachne/examples/ISO_matching_small_mesh.ipynb
@@ -17,7 +17,7 @@
       "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
       "                                          \n",
       "\n",
-      "Client Version: v2024.06.21\n"
+      "Client Version: v2025.01.13\n"
      ]
     }
    ],
@@ -46,12 +46,12 @@
    ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n119\", 5555)"
+    "ak.connect(\"n0107\", 5555)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0e3a275a",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9aa2b97c",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "ed073422",
    "metadata": {},
    "outputs": [
@@ -151,26 +151,18 @@
     "\"\"\"VF2-SI STRUCTURAL + labels + rels\"\"\"\n",
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
-    "                                           match_type = \"iso\",\n",
+    "                                           algorithm_type = \"si\", \n",
+    "                                           \n",
     "                                           reorder_type = \"structural\", return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "699ed9e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 43.0 monos inside of the graph with reordering\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-SI STRUCTURAL + labels + rels\"\"\"\n",
     "\n",
@@ -183,19 +175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3d625f42",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found isomorphic subgraphs:\n",
-      "Total number of isomorphisms: 18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import networkx as nx\n",
     "from networkx.algorithms import isomorphism\n",
@@ -261,19 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5470629b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found monomorphic subgraphs:\n",
-      "Total number of monomorphisms: 43\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -292,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "arkouda-dev",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
